--- a/index.html
+++ b/index.html
@@ -6,29 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-2</title>
     <link rel="stylesheet" href="Style/style.css">
+    <script src="https://kit.fontawesome.com/f1e5595698.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="quicksand-font">
     <!-- start header -->
     <header>
-        <nav class="nav-bar">
-            <div class="nav-photo">
-                <a href=""><img src="assets/logo.png" alt=""></a>
-                <h3 class="nav-heading">SCHOOL</h3>
-            </div>
-            <input type="checkbox" name="" id="check">
-            <div>
-                <ul class="nav-ul">
-                    <li><a class="li-1" href="#">Home</a></li>
-                    <li><a class="li-2" href="#">About</a></li>
-                    <li><a class="li-3" href="#">Facilities</a></li>
-                    <li><a class="li-4" href="#">Admission</a></li>
-                    <label for="check" class="close-menu"><i class="fa-solid fa-bars"></i></label>
-                </ul>
-            </div>
-            <div>
-                <button class="nav-btn">Contact</button>
-            </div>
+        <nav>
+            <input type="checkbox" id="check">
+            <label for="check" class="check-btn">
+                <i class="fa-solid fa-bars"></i>
+            </label>
+            <label class="logo"><img src="assets/logo.png" alt=""></label>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Facilities</a></li>
+                <li><a href="">Admission</a></li>
+            </ul>
         </nav>
     </header>
     <!-- end header -->
