--- a/index.html
+++ b/index.html
@@ -13,17 +13,25 @@
     <!-- start header -->
     <header>
         <nav>
+            <!-- <input type="checkbox" id="check">
+            <label for="check" class="check-btn">
+                <i class="fa-solid fa-bars"></i>
+            </label> -->
+            <div class="logo">
+                <a href=""><img src="assets/logo.png" alt=""></a>
+                <h3 class="nav-heading">SCHOOL</h3>
+            </div>
             <input type="checkbox" id="check">
             <label for="check" class="check-btn">
                 <i class="fa-solid fa-bars"></i>
             </label>
-            <label class="logo"><img src="assets/logo.png" alt=""></label>
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Facilities</a></li>
-                <li><a href="">Admission</a></li>
+            <ul class="nav-ul">
+                <li><a class="list-1" href="">Home</a></li>
+                <li><a class="list-2" href="">About</a></li>
+                <li><a class="list-3" href="">Facilities</a></li>
+                <li><a class="list-4" href="">Admission</a></li>
             </ul>
+            <button class="nav-btn">Contact</button>
         </nav>
     </header>
     <!-- end header -->
