--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body class="quicksand-font">
     <!-- start header -->
     <header>
+        <!-- nav start -->
         <nav>
             <!-- <input type="checkbox" id="check">
             <label for="check" class="check-btn">
@@ -33,6 +34,25 @@
             </ul>
             <button class="nav-btn">Contact</button>
         </nav>
+        <!-- nav end -->
+        <!-- banner start -->
+        <section class="banner-section">
+            <div class="banner">
+                <div class="banner-all">
+                    <h2 class="banner-heading"><span class="heading-1">Empowering</span> <br>
+                        students from small <br> age <span class="heading-2">towards vision</span>
+                    </h2>
+                    <p class="banner-p">
+                        With the courage, Confidence, Creativity and Compassion to make <br> their Unique Contribution in a
+                        Diverse and Dynamic World.
+                    </p>
+                    <button class="banner-btn">Enroll Now</button>
+                </div>
+                <div class="banner-img">
+                    <img src="assets/hero-kids.png" alt="">
+                </div>
+            </div>
+        </section>
     </header>
     <!-- end header -->
     <!-- start main -->
