adding somne code

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                         students from small <br> age <span class="heading-2">towards vision</span>
                     </h2>
                     <p class="banner-p">
-                        With the courage, Confidence, Creativity and Compassion to make <br> their Unique Contribution in a
+                        With the courage, Confidence, Creativity and Compassion to make <br> their Unique Contribution
+                        in a
                         Diverse and Dynamic World.
                     </p>
                     <button class="banner-btn">Enroll Now</button>
@@ -56,7 +57,38 @@
     </header>
     <!-- end header -->
     <!-- start main -->
-    <main></main>
+    <main>
+        <section class="curriculum">
+            <h3 class="curriculum-heading">Standard Curriculum</h3>
+            <div class="curriculum-card">
+                <div class="curriculum-card-1">
+                    <img src="assets/kinder.png" alt="">
+                    <h4 class="curriculum-card-heading">Kinder (3-6) Years</h4>
+                    <p class="curriculum-card-des raleway-font">Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+                    <p class="curriculum-btn-1">Read More...</p>
+                </div>
+                <div class="curriculum-card-2">
+                    <img src="assets/elementary.png" alt="">
+                    <h4 class="curriculum-card-heading">Elementary School</h4>
+                    <p class="curriculum-card-des raleway-font">Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+                    <p class="curriculum-btn-2">Read More...</p>
+                </div>
+                <div class="curriculum-card-3">
+                    <img src="assets/middle.png" alt="">
+                    <h4 class="curriculum-card-heading">Middle (10-16) Years</h4>
+                    <p class="curriculum-card-des raleway-font">Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+                    <p class="curriculum-btn-3">Read More...</p>
+                </div>
+            </div>
+            <div></div>
+        </section>
+    </main>
     <!-- end main -->
     <!-- start footer -->
     <footer></footer>
