--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@
                     <p class="curriculum-btn-3">Read More...</p>
                 </div>
             </div>
-            <div></div>
+            <div class="arrow-btn">
+                <button class="arrow"><i class="fa-solid fa-chevron-left"></i></button>
+                <button class="arrow"><i class="fa-solid fa-chevron-right"></i></button>
+            </div>
         </section>
     </main>
     <!-- end main -->
