--- a/index.html
+++ b/index.html
@@ -91,6 +91,48 @@
                 <button class="arrow"><i class="fa-solid fa-chevron-right"></i></button>
             </div>
         </section>
+        <section class="our-stories">
+            <h2 class="story-heading">Our Stories</h2>
+            <div class="stories">
+                <div class="story-1">
+                    <img src="assets/story-1.png" alt="">
+                    <p class="story-1-btn">November 19, 2019</p>
+                    <h3 class="story-1-heading">A fun toddler coloring training on <br>
+                        classroom</h3>
+                    <p class="story-1-des">Beautiful branding for changes by Never Now in Australia.
+                        changes is a platform for open discussion in an inclusive and
+                        collaborative environment, providing the...</p>
+                </div>
+                <div class="all-stories">
+                    <div class="story-2">
+                        <img src="assets/story-2.png" alt="">
+                        <p class="story-2-btn">November 19, 2019</p>
+                        <h4 class="story-2-heading">Find out if a school fits the
+                            family’s needs
+                        <h4>
+                    </div>
+                    <div class="story-3">
+                        <img src="assets/story-3.png" alt="">
+                        <p class="story-3-btn">November 19, 2019</p>
+                        <h4 class="story-2-heading">Summer math & literacy
+                            centres for kids</h4>
+                    </div>
+                    <div class="story-4">
+                        <img src="assets/story-4.png" alt="">
+                        <p class="story-4-btn">September 10, 2019</p>
+                        <h4 class="story-2-heading">Classroom management
+                            techniques for new tutors</h4>
+                    </div>
+                    <div class="story-5">
+                        <img src="assets/story-5.png" alt="">
+                        <p class="story-5-btn">July 19, 2019</p>
+                        <h4 class="story-2-heading">Conversation rhymes
+                            improve kids listening</h4>
+                    </div>
+                </div>
+            </div>
+            <button class="story-btn">View All</button>
+        </section>
     </main>
     <!-- end main -->
     <!-- start footer -->
