--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
                 <button class="arrow"><i class="fa-solid fa-chevron-right"></i></button>
             </div>
         </section>
+        <marquee width="100%" direction="left" height="100px">
+            <p class="marquee-text">
+                Early marriage fosters emotional support, shared growth, extended family planning, financial stability, cultural acceptance, and longer relationships, enhancing mutual understanding.</p>
+            </marquee>
         <section class="our-stories">
             <h2 class="story-heading">Our Stories</h2>
             <div class="stories">
@@ -136,7 +140,36 @@
     </main>
     <!-- end main -->
     <!-- start footer -->
-    <footer></footer>
+    <footer>
+        <section class="all-footer">
+            <div class="footer-logo">
+                <div class="logo-div">
+                    <img src="assets/logo.png" alt="">
+                    <h3 class="logo-heading">Kids <br>
+                        Education</h3>
+                </div>
+                <p class="footer-des">Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
+            </div>
+            <div>
+                <h5 class="header-school">About School</h5>
+                <ul class="items">
+                    <li class="ul-items">Home</li>
+                    <li class="ul-items">About</li>
+                    <li class="ul-items">Facilities</li>
+                    <li class="ul-items">Admission</li>
+                </ul>
+            </div>
+            <div class="social-icons">
+                <h4 class="social-heading">Keep In Touch</h4>
+                <ul class="all-icons">
+                    <li><a href=""><img src="assets/fb.png" alt=""></a></li>
+                    <li><a href=""><img src="assets/dribble.png" alt=""></a></li>
+                    <li><a href=""><img src="assets/twitter.png" alt=""></a></li>
+                    <li><a href=""><img src="assets/google+.png" alt=""></a></li>
+                </ul>
+            </div>
+        </section>
+    </footer>
     <!-- end footer -->
 </body>
 
