also second las

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <h3 class="logo-heading">Kids <br>
                         Education</h3>
                 </div>
-                <p class="footer-des">Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
+                <p class="footer-des">Encouraging curiosity and creativity in children through engaging activities, reading, problem-solving, collaborative learning, and emotional support builds a strong foundation for lifelong education.</p>
             </div>
             <div>
                 <h5 class="header-school">About School</h5>
