--- a/index.html
+++ b/index.html
@@ -121,6 +121,18 @@
                         <h4 class="story-2-heading">Summer math & literacy
                             centres for kids</h4>
                     </div>
+                    <div class="story-3-1">
+                        <img src="assets/story-3.png" alt="">
+                        <p class="story-3-btn">November 19, 2019</p>
+                        <h4 class="story-2-heading">Summer math & literacy
+                            centres for kids</h4>
+                    </div>
+                    <div class="story-3-1">
+                        <img src="assets/story-3.png" alt="">
+                        <p class="story-3-btn">November 19, 2019</p>
+                        <h4 class="story-2-heading">Summer math & literacy
+                            centres for kids</h4>
+                    </div>
                     <div class="story-4">
                         <img src="assets/story-4.png" alt="">
                         <p class="story-4-btn">September 10, 2019</p>
