--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <section class="all-footer">
             <div class="footer-logo">
                 <div class="logo-div">
-                    <img src="assets/logo.png" alt="">
+                    <img src="assets/Group 1.png" alt="">
                     <h3 class="logo-heading">Kids <br>
                         Education</h3>
                 </div>
