--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <button class="banner-btn">Enroll Now</button>
                 </div>
                 <div class="banner-img">
-                    <img src="assets/hero-kids.png" alt="">
+                    <img src="assets/hero-kids.png" alt="" width="100%">
                 </div>
             </div>
         </section>
