--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
             <h3 class="curriculum-heading">Standard Curriculum</h3>
             <div class="curriculum-card">
                 <div class="curriculum-card-1">
-                    <img src="assets/kinder.png" alt="">
+                    <div>
+                        <img src="assets/kinder.png" alt="">
+                    </div>
                     <h4 class="curriculum-card-heading">Kinder (3-6) Years</h4>
                     <p class="curriculum-card-des raleway-font">Cum sociis natoque penatibus et magnis
                         dis parturient montes, nascetur ridiculus
